Mon Feb 25 13:32:13 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* lib/shell.rb (Shell::expand_path): relative to @cwd.

Sun Feb 24 17:20:50 2002  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/*/*.h: Merge from rough.
	  - Avoid namespace pollution. (MD5_* -> rb_Digest_MD5_*, etc.)

Sat Feb 23 21:12:13 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* process.c (rb_syswait): thread kludge; should be fixed to
	  support native thread.

Fri Feb 22 22:00:08 2002  Minero Aoki  <aamine@loveruby.net>

	* lib/net/protocol.rb: set read_timeout dynamically.

Fri Feb 22 19:59:33 2002  Usaku Nakamura <usa@ruby-lang.org>

	* win32/config.status.in: set LIBRUBY_SO.

Fri Feb 22 03:34:38 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (get2comp): need to specify to carry or not.

Wed Feb 20 15:15:03 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* intern.h: prototypes; rb_io_addstr(), rb_io_printf(),
	  rb_io_print(), rb_io_puts()

	* io.c (rb_io_addstr): make extern.

	* io.c (rb_io_printf): ditto.

	* io.c (rb_io_print): ditto.

	* io.c (rb_io_puts): ditto.

Wed Feb 20 12:41:59 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* hash.c (rb_any_cmp): should handle Qundef in keys.

	* eval.c (remove_method): should not remove a empty method to
	  implement "undef".

	* eval.c (rb_eval): should allow singleton class def for
	  true/false/nil.

Tue Feb 19 22:49:29 2002  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb: remove unused class Accumulator.

	* lib/net/http.rb: read response in HTTP#request. not
	  HTTPRequest#exec.

	* lib/net/http.rb: proxy related class instance variables are not
	  initialized correctly.

	* doc/net/http.rb: modify typo in the description of basic auth.

Tue Feb 19 20:20:12 2002  Ed Sinjiashvili  <edsin@swes.saren.ru>

	* parse.y (str_extend): backslash escape was done wrong.

Tue Feb 19 15:51:41 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* class.c (rb_include_module): should preserve ancestor order in